--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "prisma": "^5.20.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.10",
     "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2"
