--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@lbringer237/tracker-common": "^1.0.0",
     "@prisma/client": "^5.20.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
