--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@lbringer237/tracker-common": "^1.0.0",
+    "@lbringer237/tracker-common": "^1.0.2",
     "@prisma/client": "^5.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
