--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@lbringer237/tracker-common": "^1.0.4",
+    "@tabler/icons-react": "^3.20.0",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
